Calculadora/calcE2Solucion/calc.output
Gramática

    0 $accept: entrada $end

    1 entrada: %empty

    2 $@1: %empty

    3 entrada: entrada $@1 linea

    4 linea: expresion FIN
    5      | ID ASIG expresion FIN
    6      | error FIN

    7 expresion: expresion MAS expresion
    8          | expresion MENOS expresion
    9          | expresion POR expresion
   10          | expresion DIV expresion
   11          | expresion MOD expresion
   12          | PARI expresion PARD
   13          | MENOS expresion
   14          | NUM


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 6
PARI (258) 12
PARD (259) 12
FIN (260) 4 5 6
ASIG (261) 5
NUM (262) 14
ID (263) 5
MAS (264) 7
MENOS (265) 8 13
POR (266) 9
DIV (267) 10
MOD (268) 11
UMENOS (269)


No terminales con las reglas donde aparecen

$accept (15)
    en la izquierda: 0
entrada (16)
    en la izquierda: 1 3, en la derecha: 0 3
$@1 (17)
    en la izquierda: 2, en la derecha: 3
linea (18)
    en la izquierda: 4 5 6, en la derecha: 3
expresion (19)
    en la izquierda: 7 8 9 10 11 12 13 14, en la derecha: 4 5 7 8 9
    10 11 12 13


Estado 0

    0 $accept: . entrada $end

    $default  reduce usando la regla 1 (entrada)

    entrada  ir al estado 1


Estado 1

    0 $accept: entrada . $end
    3 entrada: entrada . $@1 linea

    $end  desplazar e ir al estado 2

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 3


Estado 2

    0 $accept: entrada $end .

    $default  aceptar


Estado 3

    3 entrada: entrada $@1 . linea

    error  desplazar e ir al estado 4
    PARI   desplazar e ir al estado 5
    NUM    desplazar e ir al estado 6
    ID     desplazar e ir al estado 7
    MENOS  desplazar e ir al estado 8

    linea      ir al estado 9
    expresion  ir al estado 10


Estado 4

    6 linea: error . FIN

    FIN  desplazar e ir al estado 11


Estado 5

   12 expresion: PARI . expresion PARD

    PARI   desplazar e ir al estado 5
    NUM    desplazar e ir al estado 6
    MENOS  desplazar e ir al estado 8

    expresion  ir al estado 12


Estado 6

   14 expresion: NUM .

    $default  reduce usando la regla 14 (expresion)


Estado 7

    5 linea: ID . ASIG expresion FIN

    ASIG  desplazar e ir al estado 13


Estado 8

   13 expresion: MENOS . expresion

    PARI   desplazar e ir al estado 5
    NUM    desplazar e ir al estado 6
    MENOS  desplazar e ir al estado 8

    expresion  ir al estado 14


Estado 9

    3 entrada: entrada $@1 linea .

    $default  reduce usando la regla 3 (entrada)


Estado 10

    4 linea: expresion . FIN
    7 expresion: expresion . MAS expresion
    8          | expresion . MENOS expresion
    9          | expresion . POR expresion
   10          | expresion . DIV expresion
   11          | expresion . MOD expresion

    FIN    desplazar e ir al estado 15
    MAS    desplazar e ir al estado 16
    MENOS  desplazar e ir al estado 17
    POR    desplazar e ir al estado 18
    DIV    desplazar e ir al estado 19
    MOD    desplazar e ir al estado 20


Estado 11

    6 linea: error FIN .

    $default  reduce usando la regla 6 (linea)


Estado 12

    7 expresion: expresion . MAS expresion
    8          | expresion . MENOS expresion
    9          | expresion . POR expresion
   10          | expresion . DIV expresion
   11          | expresion . MOD expresion
   12          | PARI expresion . PARD

    PARD   desplazar e ir al estado 21
    MAS    desplazar e ir al estado 16
    MENOS  desplazar e ir al estado 17
    POR    desplazar e ir al estado 18
    DIV    desplazar e ir al estado 19
    MOD    desplazar e ir al estado 20


Estado 13

    5 linea: ID ASIG . expresion FIN

    PARI   desplazar e ir al estado 5
    NUM    desplazar e ir al estado 6
    MENOS  desplazar e ir al estado 8

    expresion  ir al estado 22


Estado 14

    7 expresion: expresion . MAS expresion
    8          | expresion . MENOS expresion
    9          | expresion . POR expresion
   10          | expresion . DIV expresion
   11          | expresion . MOD expresion
   13          | MENOS expresion .

    $default  reduce usando la regla 13 (expresion)


Estado 15

    4 linea: expresion FIN .

    $default  reduce usando la regla 4 (linea)


Estado 16

    7 expresion: expresion MAS . expresion

    PARI   desplazar e ir al estado 5
    NUM    desplazar e ir al estado 6
    MENOS  desplazar e ir al estado 8

    expresion  ir al estado 23


Estado 17

    8 expresion: expresion MENOS . expresion

    PARI   desplazar e ir al estado 5
    NUM    desplazar e ir al estado 6
    MENOS  desplazar e ir al estado 8

    expresion  ir al estado 24


Estado 18

    9 expresion: expresion POR . expresion

    PARI   desplazar e ir al estado 5
    NUM    desplazar e ir al estado 6
    MENOS  desplazar e ir al estado 8

    expresion  ir al estado 25


Estado 19

   10 expresion: expresion DIV . expresion

    PARI   desplazar e ir al estado 5
    NUM    desplazar e ir al estado 6
    MENOS  desplazar e ir al estado 8

    expresion  ir al estado 26


Estado 20

   11 expresion: expresion MOD . expresion

    PARI   desplazar e ir al estado 5
    NUM    desplazar e ir al estado 6
    MENOS  desplazar e ir al estado 8

    expresion  ir al estado 27


Estado 21

   12 expresion: PARI expresion PARD .

    $default  reduce usando la regla 12 (expresion)


Estado 22

    5 linea: ID ASIG expresion . FIN
    7 expresion: expresion . MAS expresion
    8          | expresion . MENOS expresion
    9          | expresion . POR expresion
   10          | expresion . DIV expresion
   11          | expresion . MOD expresion

    FIN    desplazar e ir al estado 28
    MAS    desplazar e ir al estado 16
    MENOS  desplazar e ir al estado 17
    POR    desplazar e ir al estado 18
    DIV    desplazar e ir al estado 19
    MOD    desplazar e ir al estado 20


Estado 23

    7 expresion: expresion . MAS expresion
    7          | expresion MAS expresion .
    8          | expresion . MENOS expresion
    9          | expresion . POR expresion
   10          | expresion . DIV expresion
   11          | expresion . MOD expresion

    POR  desplazar e ir al estado 18
    DIV  desplazar e ir al estado 19
    MOD  desplazar e ir al estado 20

    $default  reduce usando la regla 7 (expresion)


Estado 24

    7 expresion: expresion . MAS expresion
    8          | expresion . MENOS expresion
    8          | expresion MENOS expresion .
    9          | expresion . POR expresion
   10          | expresion . DIV expresion
   11          | expresion . MOD expresion

    POR  desplazar e ir al estado 18
    DIV  desplazar e ir al estado 19
    MOD  desplazar e ir al estado 20

    $default  reduce usando la regla 8 (expresion)


Estado 25

    7 expresion: expresion . MAS expresion
    8          | expresion . MENOS expresion
    9          | expresion . POR expresion
    9          | expresion POR expresion .
   10          | expresion . DIV expresion
   11          | expresion . MOD expresion

    $default  reduce usando la regla 9 (expresion)


Estado 26

    7 expresion: expresion . MAS expresion
    8          | expresion . MENOS expresion
    9          | expresion . POR expresion
   10          | expresion . DIV expresion
   10          | expresion DIV expresion .
   11          | expresion . MOD expresion

    $default  reduce usando la regla 10 (expresion)


Estado 27

    7 expresion: expresion . MAS expresion
    8          | expresion . MENOS expresion
    9          | expresion . POR expresion
   10          | expresion . DIV expresion
   11          | expresion . MOD expresion
   11          | expresion MOD expresion .

    $default  reduce usando la regla 11 (expresion)


Estado 28

    5 linea: ID ASIG expresion FIN .

    $default  reduce usando la regla 5 (linea)
